# pull_requests_stats

./: .gitignore  LICENSE.txt  README.txt  demo.config.toml  pyproject.toml  setup.cfg
src/pull_requests_stats/: configuration.py  factories.py  main.py  models.py  pygal_helper.py  tagging.py  utils.py
src/pull_requests_stats/graphql/: __init__.py  get_pull_requests.graphql
src/pull_requests_stats/sql/: __init__.py  setup.sql
tests/: test_tagging.py
