[metadata]
name = pull_requests_stats
version = 0.1.0.dev0
description = FIXME
long_description = file: README.rst
long_description_content_type = text/x-rst
url = FIXME
author = Polyconseil
author_email = damien+opensource@damienbaty.com
license = BSD-3-Clause
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = FIXME
platform = any
project_urls =
    Documentation = FIXME
    Source = FIXME
    Bug Tracker = FIXME

[options]
python_requires = >=3.8
install_requires =
    requests
package_dir=
    =src
packages=find:

[options.entry_points]
console-scripts =
    pull_requests_stats = pull_requests_stats.main:main

[options.packages.find]
where = src

[zest.releaser]
create-wheel = yes
